배경색 변경

--- a/main/templates/comunity/coding_comunity.html
+++ b/main/templates/comunity/coding_comunity.html
@@ -56,6 +56,8 @@
         </div>
 </div>
 
+    <div style="padding-top:30px;"></div>
+
      <section class="section04">
         <img class="bg left" src="{% static 'resource/img/main/bg_contactLeft.png' %}" alt="bg">
         <img class="bg right" src="{% static 'resource/img/main/bg_contactRight.png' %}" alt="bg">
