--- a/main/templates/myclass/myclass_list.html
+++ b/main/templates/myclass/myclass_list.html
@@ -35,7 +35,7 @@
                         <span class="title">{{list_detail.prd.title}}</span>
                             {% if list_detail.play == 'D'%}
                              <p class="date"> 강의시작 전입니다.</p>
-                            <br/>
+                             <p class="date">&nbsp;</p>
                             {% else %}
                             <p class="writer">{{list_detail.play_time}} ~ </p>
                             <p class="date"> {{list_detail.expire_time | date:'Y-m-d' }}</p>
