배경색 변경

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -108,7 +108,7 @@
 
                                     {% if prd_detail.option1 != "" %}
                                      <select id="options_1" name="options_1" style="width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, 1);">
-                                        <option value="0">----------------옵션------</option>
+                                        <option value="0">--------------필수옵션----------</option>
                                         <option value="0">선택없음</option>
                                         <option value={{prd_detail.option1_price}}>{{prd_detail.option1}} (+{{prd_detail.option1_price}})</option>
                                      </select>
@@ -116,7 +116,7 @@
 
                                     {% if prd_detail.option2 != "" %}
                                      <select id="options_2" name="options_2" style="width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, 2);">
-                                        <option value="0">----------------옵션------</option>
+                                        <option value="0">--------------필수옵션----------</option>
                                         <option value="0">선택없음</option>
                                         <option value={{prd_detail.option2_price}}>{{prd_detail.option2}} (+{{prd_detail.option2_price}})</option>
                                      </select>
@@ -124,7 +124,7 @@
 
                                     {% if prd_detail.option3 != "" %}
                                      <select id="options_3" name="options_3" style="width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myOption(this.value, 3);">
-                                        <option value="0">----------------옵션------</option>
+                                        <option value="0">--------------필수옵션----------</option>
                                         <option value="0">선택없음</option>
                                         <option value={{prd_detail.option3_price}}>{{prd_detail.option3}} (+{{prd_detail.option3_price}})</option>
                                      </select>
