배경색 변경

--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -245,7 +245,7 @@
                               <div class="col-xs-12">
                                  <div class="border-radius-none margin-top-30">
                                       <div>
-                                          <div class="margin-top-40 xans-order-totalsummary bg-color-gray">
+                                          <div class="margin-top-40 xans-order-totalsummary">
                                               <table summary>
                                                  <colgroup>
                                                      <col style="width:47%;">
