--- a/main/templates/runAdmin/deposit_list.html
+++ b/main/templates/runAdmin/deposit_list.html
@@ -16,7 +16,7 @@
             </div>
         </div>
 
-        <div class="codingLounge_list" style="margin-left:280px;">
+        <div class="codingLounge_list" style="margin-left:300px;">
             <div class="filter_area fixed">
                 <div class="search_area">
                     <div class="input_area_lounge">
@@ -75,6 +75,8 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <div id="total_data" class="page"><span>조회 데이터가 없습니다.</span></div>
              <div class="page">
                 <ul id="paging" class="pagination modal"></ul>
             </div>
@@ -85,6 +87,16 @@
 
     $(document).ready(function() {
        $('#page_cnt').val('{{page_cnt}}').prop("selected",true);
+
+       var total = '{{total_count}}';
+       if (total == 0)
+       {
+            $("#total_data").show();
+       }
+       else
+       {
+            $("#total_data").hide();
+       }
 
        var page = '{{last_page}}';
        var cur_page = '{{paging_num}}';
