--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -173,6 +173,10 @@
                     </div>
                   </tr>
 
+                 <div>
+                    <a href="javascript:void(0);" class="btn btn-del" onClick="javascript:goDelete();">선택상품 삭제</a>
+                 </div>
+
                  <!-- 총금액 -->
                  <tr class="row">
                       <div class="col-xs-offset-1 col-xs-10">
@@ -265,7 +269,11 @@
                                                      <tr>
                                                          <td>
                                                              <select id="coupon" name="coupon" style="float:center; width:80%; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;" onchange="myCoupon(this.value)">
-                                                                <option value="0">&nbsp;&nbsp;----------------&nbsp;사용 가능한 쿠폰을 선택하세요.&nbsp;------------</option>
+                                                                  {% if coupon_detail.count == 0 %}
+                                                                    <option value="0">&nbsp;&nbsp;----------------&nbsp;적용할 수 있는 쿠폰이 없습니다.&nbsp; ------------</option>
+                                                                  {% else %}
+                                                                    <option value="0">&nbsp;&nbsp;----------------&nbsp;사용 가능한 쿠폰을 선택하세요.&nbsp; ------------</option>
+                                                                  {% endif %}
                                                                   {% for couponList in coupon_detail %}
                                                                      <option value={{couponList.coupon.coupon_num}},{{couponList.coupon.discount}},{{couponList.coupon.delivery_price}},{{couponList.coupon.prd.prd_code}},{{couponList.coupon.prd.title}}>{{couponList.coupon.coupon_name}} [유효기한 : {{couponList.expire | date:'y-m-d' }} 까지]</option>
                                                                   {% endfor %}
@@ -413,7 +421,6 @@
                     </tr>
                 </div>
                 <div class="btn-center" style="margin-bottom:40px">
-                    <a href="javascript:void(0);" class="btn order_del" onClick="javascript:goDelete();">삭제하기</a>
                     <a href="javascript:void(0);" class="btn order_complete" onClick="javascript:goPay();">주문하기</a>
                 </div>
              </tr>
